--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div>
-    <%= form.label :desription, style: "display: block" %>
+    <%= form.label :description, style: "display: block" %>
     <%= form.text_area :desription %>
   </div>
 
